[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biofit"
version = "1.0.0"
description = "AI Fitness Prescription Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "openai",
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
biofit-server = "server.app:app"

[tool.uv]
managed = true